# anatomy_gui

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  Roadmap.md  hashmap.json  index.html  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  sitemap.xml
src/tutorial/anatomy_gui_for_tutorials/stage10/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage10/example/: CMakeLists.txt  main.cpp
src/tutorial/anatomy_gui_for_tutorials/stage10/include/: application.h  button.h  color_widget.h  container.h  double_buffer.h  geometry.h  label.h  layout_strategy.h  observable.h  painter.h  property.h  raii.h  root_window.h  scoped_connection.h  signal.h  thread_pool.h  widget.h
src/tutorial/anatomy_gui_for_tutorials/stage10/src/: application.cpp  button.cpp  color_widget.cpp  double_buffer.cpp  label.cpp  painter.cpp  root_window.cpp  thread_pool.cpp  widget.cpp
src/tutorial/anatomy_gui_for_tutorials/stage2/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage2/build_ci/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
src/tutorial/anatomy_gui_for_tutorials/stage2/document/: xcb-create-window-note.md
src/tutorial/anatomy_gui_for_tutorials/stage2/example/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage2/include/: application.h  application_handle.h  window.h  window_builder.h  window_handle.h
src/tutorial/anatomy_gui_for_tutorials/stage2/src/: application.cpp  window.cpp  window_builder.cpp
src/tutorial/anatomy_gui_for_tutorials/stage3/: CMakeLists.txt  main.cpp
src/tutorial/anatomy_gui_for_tutorials/stage4/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage4/example/: CMakeLists.txt  main.cpp
src/tutorial/anatomy_gui_for_tutorials/stage4/include/: color_rect.h  geometry.h  label.h  painter.h  raii.h  root_window.h  widget.h
src/tutorial/anatomy_gui_for_tutorials/stage4/src/: color_rect.cpp  label.cpp  root_window.cpp  widget.cpp
src/tutorial/anatomy_gui_for_tutorials/stage5/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage5/example/: CMakeLists.txt  main.cpp
src/tutorial/anatomy_gui_for_tutorials/stage5/include/: color_widget.h  container.h  geometry.h  layout_strategy.h  painter.h  raii.h  root_window.h  widget.h
src/tutorial/anatomy_gui_for_tutorials/stage5/src/: layout_strategy.cpp  (+2 more)
src/tutorial/anatomy_gui_for_tutorials/stage6/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage7/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage8/: CMakeLists.txt
src/tutorial/anatomy_gui_for_tutorials/stage9/: CMakeLists.txt
src/tutorial/graphics/: CMakeLists.txt  build.bat
src/tutorial/graphics/common/: ComHelper.hpp  D3D12Compat.hpp  RenderWindow.hpp
src/tutorial/graphics/custom_controls/: CMakeLists.txt
src/tutorial/graphics/d3d11/: CMakeLists.txt
src/tutorial/graphics/d3d12/: CMakeLists.txt
src/tutorial/graphics/direct2d/: CMakeLists.txt
src/tutorial/graphics/gdi/: CMakeLists.txt
src/tutorial/graphics/gdiplus/: CMakeLists.txt
src/tutorial/graphics/hlsl/: CMakeLists.txt
src/tutorial/graphics/opengl/: CMakeLists.txt
src/tutorial/graphics/sprite_renderer/: CMakeLists.txt  SpriteBatch.hpp  TextRenderer.hpp  TextureLoader.hpp  main.cpp
src/tutorial/native_win32/: .clang-format  CMakeLists.txt  README.md  build.bat
src/tutorial/native_win32/01_hello_world/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/02_register_window_class/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/03_create_window/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/04_message_loop/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/05_window_procedure/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/06_paint/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/07_close_window/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/08_global_state/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/09_instance_data/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/10_oop_wrapper/: CMakeLists.txt  README.md  main.cpp
src/tutorial/native_win32/11_dpi_aware/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/12_basic_controls/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/13_wm_notify/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/14_listview/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/15_treeview/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/16_more_controls/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/17_modal_dialog/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/18_modeless_dialog/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/19_dialog_proc/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/20_resource_files/: CMakeLists.txt  main.cpp  resource.h  resources.rc
src/tutorial/native_win32/21_menu_resource/: CMakeLists.txt  main.cpp  resource.h  resources.rc
src/tutorial/native_win32/22_icon_cursor_bitmap/: CMakeLists.txt  main.cpp  resource.h  resources.rc
src/tutorial/native_win32/23_string_table/: CMakeLists.txt  main.cpp  resource.h  resources.rc
src/tutorial/native_win32/24_dialog_template/: CMakeLists.txt  main.cpp  resource.h  resources.rc
src/tutorial/native_win32/25_toolbar_statusbar/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/26_cross_thread_msg/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/27_borderless_window/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/28_subclassing/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/29_hook_keyboard/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/30_system_tray/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/31_file_drop/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/32_timer_clock/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/48_owner_draw/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/52_advanced_messages/: CMakeLists.txt  main.cpp
src/tutorial/native_win32/common/: BaseWindow.hpp
(+710 files in other folders)
